Bug 821307. Ensure nsTextEditorState::SetValue does nothing when the new value equals the old value, even for password inputs. r=ehsan If nsTextEditorState::SetValue is allowed to rebuild the editor DOM even when the new value is the same as the old value, then during PrepareEditor we can remove the content that's the current target of the event triggering the PrepareEditor, which prevents important code from running such as the code that focuses the text input. Normally this isn't a problem but nsTextEditorState::SetValue's code for getting the current value is broken for password controls when !mEditorInitialized. So we remove that broken code path.

We have to make sure that the password text, if any, is set on the edit-rules
during their initialization so the regular path for getting the current
value returns the right thing.